fix(extraction): place PaddleOCR-VL boxes in PDF user space and bound its load
Boxes were written top-left from the CropBox corner, while the viewer
subtracts the CropBox origin, so a scan with an offset CropBox drew its
highlights in the wrong place. They are now bottom-left in user space, as
Docling's are; a page turned by /Rotate carries its page number alone, since
the viewer outlines no rotated page.

A worker ran up to eight extractions at once against one GPU that staging now
shares, with a ten-minute deadline that a queue of long scans would exceed and
that is terminal. Each worker now sends at most two requests at a time
(configurable), the deadline starts when a request is sent, and it defaults to
thirty minutes. Docs record the staging acceptance through ocr.vadan.app.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>